@@ -9,12 +9,13 @@ class Configuration
   @disable_build_now = false
   @serialize_builds = false
   @serialized_build_timeout = 1.hour
+  @git_load_new_changesets_timeout = 5.minutes
 
   class << self
     # published configuration options (mentioned in config/site_config.rb.example)
     attr_accessor :default_polling_interval, :disable_build_now, :email_from,
                   :dashboard_refresh_interval, :serialize_builds,
-                  :serialized_build_timeout
+                  :serialized_build_timeout, :git_load_new_changesets_timeout
     attr_reader :dashboard_url
 
     # non-published configuration options (obscure stuff, mostly useful for http://cruisecontrolrb.thoughtworks.com)
