@@ -77,14 +77,41 @@ class SourceControl::GitTest < Test::Unit::TestCase
   def test_latest_revision_should_call_git_log_and_send_it_to_parser
     in_sandbox do
       git = new_git
+      git.expects(:git).with('fetch', ['origin'])
       git.expects(:git).with("branch").yields(StringIO.new("* master\n"))
       git.expects(:git).with("log", ["-1", '--pretty=raw', "--stat", 'origin/master']).returns('')
-      git.expects(:git).with('fetch', ['origin'])
       stub_parser = Object.new
       stub_parser.stubs(:parse).returns([:foo])
       Git::LogParser.expects(:new).returns(stub_parser)
 
       assert_equal :foo, git.latest_revision
+    end
+  end
+
+  def test_latest_revision_should_timeout
+    in_sandbox do
+      git = new_git
+      class << git
+        def git(*args)
+          sleep 1
+        end
+      end
+      
+      begin
+        old_timeout = Configuration.git_load_new_changesets_timeout
+        Configuration.git_load_new_changesets_timeout = 0.5
+
+        assert_raise(BuilderError) do
+          begin
+            git.latest_revision
+          rescue BuilderError => e
+            assert_equal "Timeout in 'git fetch origin'", e.message
+            raise e
+          end
+        end
+      ensure
+        Configuration.git_load_new_changesets_timeout = old_timeout
+      end
     end
   end
 
