@@ -18,6 +18,8 @@ TRUNK
 - [bugfix] Make dashboard xhtml compliant
 - [bugfix] Recognize OpenBSD as a platform
 - Improve daemon_helper to kill all child processes (don't leave any orphans)
+- [bugfix] Timeout if 'git fetch origin' hangs.  Configurable via git_load_new_changesets_timeout.
+           Fixes https://cruisecontrolrb.lighthouseapp.com/projects/9150-cruise-control-rb/tickets/229-sometimes-git-hangs
 
 ------------------------------------------------------------------------------------------------------------------------
 * 1.3.0
